[gd_scene load_steps=8 format=2]

[ext_resource path="res://objects/sign/sign.gd" type="Script" id=1]
[ext_resource path="res://tiles/tileset1.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 8, 8 )

[sub_resource type="DynamicFontData" id=2]

font_path = "res://misc_assets/PressStart2P.ttf"

[sub_resource type="DynamicFont" id=3]

size = 8
use_mipmaps = false
use_filter = false
font_data = SubResource( 2 )
_sections_unfolded = [ "Extra Spacing", "Font", "Font/fallback", "Resource", "Settings" ]

[sub_resource type="Animation" id=4]

resource_name = "hide"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("text_parent:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]

resource_name = "show"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("text_parent:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.5, 0.5 ) ]
}

[node name="Sign" type="Area2D" index="0"]

pause_mode = 2
scale = Vector2( 3, 3 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 32
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pause" ]
text = "Insert your text here."

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

position = Vector2( 8, 8 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="1"]

position = Vector2( 8, 8 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="text_parent" type="Node2D" parent="." index="2"]

position = Vector2( 8, 8 )
scale = Vector2( 1e-05, 1e-05 )
_sections_unfolded = [ "Transform" ]

[node name="big_sign" type="Sprite" parent="text_parent" index="0"]

scale = Vector2( 8, 8 )
texture = ExtResource( 2 )
offset = Vector2( 0, -6 )
region_enabled = true
region_rect = Rect2( 16, 0, 32, 16 )
_sections_unfolded = [ "Offset", "Region", "Transform" ]

[node name="label" type="Label" parent="text_parent" index="1"]

modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -100.0
margin_top = -94.0
margin_right = 100.0
margin_bottom = -54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "What's Up?"
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility", "custom_fonts" ]

[node name="anim" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/hide = SubResource( 4 )
anims/show = SubResource( 5 )
blend_times = [  ]

[connection signal="body_entered" from="." to="." method="_on_Sign_body_entered"]

[connection signal="body_exited" from="." to="." method="_on_Sign_body_exited"]


